Integrated SysCalc MG5_aMC@NLO theory uncertainty text from Alexis.
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@280 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/symbols.tex
+++ b/doc/symbols.tex
@@ -71,6 +71,7 @@
 \newcommand{\madgraph}{{\textsc{MadGraph5\_aMC@NLO}}\xspace}
 \newcommand{\madevent}{{\namecaps{MadEvent}}\xspace}
 \newcommand{\madgraphFiveaMCNLO}{\texttt{MadGraph5\_aMC@NLO}\xspace}
+\newcommand{\syscalc}{\textsc{SysCalc}\xspace}
 \newcommand{\madanalysis}{{\namecaps{MadAnalysis}}\xspace}
 \newcommand{\powheg}{{\namecaps{POWHEG}}\xspace}
 \newcommand{\mcfm}{{\namecaps{MCFM}}\xspace}
