--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -1943,3 +1943,62 @@
       reportNumber   = "CERN-TH-5468-89",
       SLACcitation   = "%%CITATION = CERN-TH-5468-89 ETC.;%%",
 }
+
+@article{Alwall:2011uj,
+      author         = "Alwall, Johan and Herquet, Michel and Maltoni, Fabio and
+                        Mattelaer, Olivier and Stelzer, Tim",
+      title          = "{MadGraph 5 : Going Beyond}",
+      journal        = "JHEP",
+      volume         = "1106",
+      pages          = "128",
+      doi            = "10.1007/JHEP06(2011)128",
+      year           = "2011",
+      eprint         = "1106.0522",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "FERMILAB-PUB-11-448-T",
+      SLACcitation   = "%%CITATION = ARXIV:1106.0522;%%",
+}
+
+@article{Sjostrand:2006za,
+      author         = "Sjostrand, Torbjorn and Mrenna, Stephen and Skands, Peter
+                        Z.",
+      title          = "{PYTHIA 6.4 Physics and Manual}",
+      journal        = "JHEP",
+      volume         = "0605",
+      pages          = "026",
+      doi            = "10.1088/1126-6708/2006/05/026",
+      year           = "2006",
+      eprint         = "hep-ph/0603175",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "FERMILAB-PUB-06-052-CD-T, LU-TP-06-13",
+      SLACcitation   = "%%CITATION = HEP-PH/0603175;%%",
+}
+
+@article{Whalley:2005nh,
+      author         = "Whalley, M.R. and Bourilkov, D. and Group, R.C.",
+      title          = "{The Les Houches accord PDFs (LHAPDF) and LHAGLUE}",
+      year           = "2005",
+      eprint         = "hep-ph/0508110",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = HEP-PH/0508110;%%",
+}
+
+@article{Mangano:2006rw,
+      author         = "Mangano, Michelangelo L. and Moretti, Mauro and
+                        Piccinini, Fulvio and Treccani, Michele",
+      title          = "{Matching matrix elements and shower evolution for
+                        top-quark production in hadronic collisions}",
+      journal        = "JHEP",
+      volume         = "0701",
+      pages          = "013",
+      doi            = "10.1088/1126-6708/2007/01/013",
+      year           = "2007",
+      eprint         = "hep-ph/0611129",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CERN-PH-TH-2006-232, FNT-T-2006-09",
+      SLACcitation   = "%%CITATION = HEP-PH/0611129;%%",
+}
