PDF labels for bookmarks fixed.
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@281 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -115,7 +115,7 @@
 
 \input{tex/Introduction.tex}
 
-\chapter{Recommended models for all \MET+X analyses}
+\chapter{\texorpdfstring{Recommended models for all \MET+X analyses}{Recommended models for all MET+X analyses}}
 \label{subsec:MonojetLikeModels}
 \input{tex/MonojetLikeModels}
 
