--- a/doc/tex/MonojetLikeModels_Appendix.tex
+++ b/doc/tex/MonojetLikeModels_Appendix.tex
@@ -1,4 +1,4 @@
-\section{Implementation of \schannel and \tchannel models for \MET+X analyses}
+\section{\texorpdfstring{Implementation of \schannel and \tchannel models for \MET+X analyses}{Implementation of \schannel and \tchannel models for MET+X analyses}}
 
 There are several matrix element implementations of the
 DM production through spin-0 and spin-1 mediators. This Appendix collects the 
@@ -471,7 +471,7 @@ the observation in the Z+$b\bar{b}$ measurements.
 	\label{fig:4Fvs5F}}
 \end{figure}
 
-\section{Implementation of specific models for $V+\MET$ analyses}
+\section{\texorpdfstring{Implementation of specific models for $V+\MET$ analyses}{Implementation of specific models for V+MET analyses}}
 
 \subsection{Model implementation for mono-Higgs models}
 \label{sub:monoHiggs}
