Update with part of Joanna Gramling's comments included.
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@282 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/EWSpecificModels_Appendix.tex
+++ b/doc/tex/EWSpecificModels_Appendix.tex
@@ -32,7 +32,7 @@ After inputting the vacuum expectation value of the Higgs field, we have
 % 
 For a nonzero $c_6$ and $v_{\rm EW} \ll \Lambda$, the iso-spin violation effects are suppressed. On the other hand, the values of $c_6$, $c^d_8$ and $c^u_8$ depend on the UV-models. 
 
-There is one possible UV-model to obtain a zero value for $c_6$ and non-zero values for $c^d_8$ and $c^u_8$. One can have the dark matter and the SM Higgs field charged under a new $U(1)^\prime$. There is a small mass mixing between SM $Z$-boson and the new \Zprime with a mixing angle of ${\cal O}(v_{\rm EW}^2/M^2_{\Zprime})$. After integrating out \Zprime, one has different effective dark matter couplings to $u_L$ and $d_L$ fields, which are proportional to their couplings to the $Z$ boson. For this model, we have $c_6=0$ and 
+There is one possible UV-model to obtain a zero value for $c_6$ and non-zero values for $c^d_8$ and $c^u_8$. One can have the dark matter and the SM Higgs field charged under a new $U(1)^\prime$ symmetry. There is a small mass mixing between SM $Z$-boson and the new \Zprime with a mixing angle of ${\cal O}(v_{\rm EW}^2/M^2_{\Zprime})$. After integrating out \Zprime, one has different effective dark matter couplings to $u_L$ and $d_L$ fields, which are proportional to their couplings to the $Z$ boson. For this model, we have $c_6=0$ and 
  %
 \begin{equation}
 \xi = \frac{-\frac{1}{2} + \frac{1}{3} \sin^2{\theta_W} }{ \frac{1}{2} - \frac{2}{3} \sin^2{\theta_W}} \approx  -2.7 
