--- a/doc/tex/EWSpecificModels_VAMediators.tex
+++ b/doc/tex/EWSpecificModels_VAMediators.tex
@@ -6,7 +6,7 @@
 \svnid{$Id: $}   
 
 
-All models detailed in this Section are applicable to signatures states where 
+All models detailed in this Section are applicable to signatures where 
  a photon, a W boson, a Z boson or a Higgs boson
  is radiated from the initial state partons instead of a gluon. 
 The experimental signature is identified as \textit{V+\MET}.
@@ -67,7 +67,7 @@ can still be considered as a benchmark for searches with a W boson if $\xi=1$.
 We leave the study of further models with cross-section enhancements due
 to different couplings to up and down quarks for studies beyond the early LHC searches
 covered in this document.
-An example of such model is the case of both DM and SM Higgs charged under a new $U(1)'$,
+An example of such model is the case of both DM and SM Higgs charged under a new $U(1)'$ symmetry,
 with a  small mass mixing between the SM Z-boson and the new \Zprime-boson.
 This leads
 to different effective DM couplings to $u_L$ and $d_L$, proportional to
@@ -95,7 +95,7 @@ impact on the kinematic distributions relevant for those searches. An example
 of the particle-level analysis acceptance using the
 generator-level cuts from Ref.~\cite{Aad:2014tda}
 for the photon+\MET analysis, but raising the photon $p_T$ cut
-to 150~\gev is shown in Figure~\ref{fig:DMV_EW_gamma_acceptance},
+to 150~\gev, is shown in Figure~\ref{fig:DMV_EW_gamma_acceptance},
 comparing a width that is set to $\Gamma=M_{med}/3$ to the
 minimal width (the ratio between the two widths
 ranges from 1.05 to 1.5 with increasing mediator masses).
@@ -125,7 +125,7 @@ $\Gamma=\mMed/3$} \\ \hline
 3000 & 1.02   & 1.03  &       & 1.01 \\
 \hline
 \end{tabular}
-    \caption{Analysis acceptance for the photon+\MET analysis when varying the mediator width, in the
+    \caption{Analysis acceptance ratios for the photon+\MET analysis when varying the mediator width, in the
     case of a vector mediator exchanged in the $s-$channel}%This plot will come from Marie-Helene
     \label{fig:DMV_EW_gamma_acceptance}
 \end{table}
