--- a/doc/tex/Introduction.tex
+++ b/doc/tex/Introduction.tex
@@ -41,7 +41,7 @@ a contact interaction involving a quark-antiquark pair or two gluons and
 two dark matter particles.  In this case,
 the missing
 energy distribution of the signal is determined
-by the mass of the dark
+by the nature and the mass of the dark
 matter particles and the Lorentz structure of the interaction. Only the
 overall production rate is a free parameter to be constrained or measured.
 Both experiments studied a variety
@@ -129,7 +129,7 @@ important to narrow the scope and timescale to the following:
 \section{Grounding Assumptions}
 
 We assume that interactions exist between Standard Model hadrons
-and whatever constitutes cosmological dark matter. If this
+and whatever the particle that constitutes cosmological dark matter. If this
 is not the case, then proton collisions will not produce dark matter
 particles, and dark matter will not scatter off nuclei in direct
 detection experiments.
@@ -164,7 +164,7 @@ set of models will certainly be required upon a discovery; see
 e.g.~\cite{Cotta:2012nj,Haisch:2013fla,Crivellin:2015wva} for some
 studies of observables that may distinguish amongst these models.
 
-The weakness of the dark matter--visible matter interactions is explained
+The weakness of the interaction between dark matter and visible matter is explained
 by assuming a mediating force or particle that indirectly connects the
 two.  In the EFT approach, the mass scale of the mediator is assumed
 to be large compared to the typical momentum involved in the production
@@ -184,7 +184,7 @@ anomalous \MET signature
 at the LHC would not uniquely imply discovery of dark matter, while at
 the same time discovery of an anomalous and annually-modulated signal
 in a direct-detection experiment would leave unanswered many questions
-about the nature of the interaction. The these two approaches, and
+about the nature of the interaction. These two approaches, and
 other types of non-collider searches, provide complementary ways to
 approach the problem, and it is in this spirit that our focus is on
 the mediator. We systematically explore the basic possibilities for
@@ -242,7 +242,7 @@ Dark Matter-electroweak boson couplings.
 Model-independent results should be emphasized 
 in the signal regions that are unique to these models, 
 and results should be considered with the necessary caution due to EFT 
-validity issues covered in the last chapter in this report. 
+validity issues covered in the last chapter of this report. 
 Results from these models may nevertheless help validate the 
 contact interaction limit of new simplified models developed to complete 
 these specific operators. 
@@ -265,7 +265,7 @@ and contact interaction operators wherever simplified models are not available a
 The final chapter is devoted to the treatment of the validity of benchmark
 models from contact interaction operators.
 The technical implementation and further models that can be studied
-beyond early searches are in appendix~\ref{app:EWSpecificModels_Appendix}. 
+beyond early searches are described in Appendix~\ref{app:EWSpecificModels_Appendix}. 
 Appendix~\ref{app:Presentation_Of_Experimental_Results} contains the necessary elements that
 should be included in the results of experimental searches to allow for further reinterpretation. 
 %The Appendices also collect information about the implementation of the
