--- a/doc/tex/MonojetLikeModels.tex
+++ b/doc/tex/MonojetLikeModels.tex
@@ -33,7 +33,7 @@ A simple extension of the Standard Model (SM) is an
 additional $U(1)$ gauge symmetry, where a dark matter (DM)
 candidate particle has charges only under this new group.
 Assuming that some SM particles are also charged under
-this group, then a new gauge boson can mediate interactions
+this group, a new gauge boson can mediate interactions
 between the SM and DM.   
 
 %Lagrangian
@@ -78,7 +78,7 @@ the mediator and dark matter masses, and the mediator couplings to dark matter a
 \end{figure}
 
 We consider two models with vector and axial-vector couplings
-between the spin-1 mediator and SM and DM fields, with
+between the spin-1 mediator $\Zprime$ and SM and DM fields, with
 the corresponding interaction Lagrangians:
 
 \begin{align}
@@ -192,15 +192,15 @@ In order to determine an optimal choice of the parameter grid for the simulation
 
 \paragraph{Scan over the couplings}
 
-To study the dependence on the coupling strength, samples were generated where a pair of \mDM=10~\gev Dark Matter particles are produced on-shell from the mediator of \mMed=1~\tev.
+To study the dependence of kinematic distributions on the coupling strength, samples were generated where a pair of \mDM=10~\gev Dark Matter particles is produced on-shell from the mediator of \mMed=1~\tev.
 From Figure~\ref{fig:monojet_scan_V_g}, we
 observe no difference in the shapes of the \MET distribution for the different choices of the coupling strength.
-This is a generator-level prediction with no kinematic selections or detector simulation. Coupling values in the scan range 0.1--1.45, holding $\gq=\gDM$, correspond to a rough estimate of the lower sensitivity of mono-jet analyses and a maximum coupling value such that $\Gamma_{\rm{min}} < \mMed$.
+This is a generator-level prediction with no kinematic selections or detector simulation. Coupling values in the scan range 0.1--1.45, fixing $\gq=\gDM$, correspond to a rough estimate of the lower sensitivity of mono-jet analyses and a maximum coupling value such that $\Gamma_{\rm{min}} < \mMed$.
 Based on similar findings for different choices of
 \mMed and \mDM, we conclude that the shapes of
 kinematic distributions are not altered
-by coupling variations, either for the on-shell Dark Matter production where $\mMed>2\mDM$,
-or for the off-shell Dark Matter production where $\mMed<2\mDM$. Only the production cross sections change.
+by coupling variations, neither for the on-shell Dark Matter production where $\mMed>2\mDM$,
+nor for the off-shell Dark Matter production where $\mMed<2\mDM$. Only the production cross sections change.
 Differences in kinematic distributions are expected only close to the transition region where both on-shell and off-shell decays occur.
 %TODO clarify slide 9 and 10 in https://indico.cern.ch/event/389275/contribution/1/material/slides/0.pdf
 %TODO check explicitly for V and A (generate corresponding samples)
@@ -301,7 +301,7 @@ simplified model is suppressed and the $\MET$ spectrum hardens, as demonstrated 
 
 Changing the mediator mass for fixed Dark Matter mass and couplings leads to significant differences in cross section and shapes of the kinematic variables for $\mMed>2\mDM$ as shown in Fig.\,\ref{fig:monojet_scan_V_mMed10}. As expected, higher mediator masses lead to harder $\MET$ spectra.
 On the other hand, the $\MET$ shapes are similar in the off-shell Dark Matter production regime.  This
-is illustrated in Fig.\,\ref{fig:monojet_scan_V_mMed1000}. Therefore, a coarse binning in $\mDM$ is sufficient at $\mMed \ll 2\mDM$.
+is illustrated in Fig.\,\ref{fig:monojet_scan_V_mMed1000}. Therefore, a coarse binning in $\mMed$ is sufficient at $\mMed \ll 2\mDM$.
 
 \begin{figure}
 \centering
