Some edits on t-channel and bFDM
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@283 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/SingleB.tex
+++ b/doc/tex/SingleB.tex
@@ -1,17 +1,28 @@
 Models of bottom-flavored Dark Matter that are closely related to the $t-$channel mediated model from this 
-Section have been proposed in Refs.~\cite{Lin:2013sca,Agrawal:2014una}. Here, DM couples preferentially to bottom quarks, with a decoupled third generation. We describe the $b$-FDM model of Ref.~\cite{Agrawal:2014una}, created to explain the Galactic Center (GC) gamma-ray excess observed in data collected by the Fermi-LAT collaboration~\cite{Daylan:2014rsa}. 
+Section have been proposed in Refs.~\cite{Lin:2013sca,Agrawal:2014una}. 
+Here, DM couples preferentially to bottom quarks, with a decoupled third generation. 
+We describe the $b$-FDM model of Ref.~\cite{Agrawal:2014una}, created to explain the Galactic Center (GC) 
+gamma-ray excess observed in data collected by the Fermi-LAT collaboration~\cite{Daylan:2014rsa}. 
+This model favors couplings to third-generation quarks via Yukawa couplings, 
+therefore respecting the MFV assumption. 
 
-\Todo{Spell out implications on MFV assumption.}
-
-The interest in this model lies in producing an
-annihilation cross section consistent with the gamma-ray excess
-that has
-perturbative values for the couplings and is
+This model produces an annihilation cross section consistent with the gamma-ray excess
+that has perturbative values for the couplings and is
 consistent with LHC constraints on the colored mediator.
-For parameters capable of explaining the anomalous gamma-ray signal in terms of Dark Matter coupling preferentially to $b-$ quarks, the model predicts a direct detection cross section that is consistent with current constraints, but within the near future reach of Direct Detection experiments. The model will be decisively tested with data from the upcoming high-energy run at the LHC. 
+For parameters capable of explaining the anomalous gamma-ray signal in terms of Dark Matter 
+coupling preferentially to $b-$ quarks, the model predicts a direct detection cross section that is consistent 
+with current constraints, but within the near future reach of Direct Detection experiments and of the
+upcoming LHC run. 
+%The model will be decisively tested with data from the upcoming high-energy run at the LHC. 
 
-The model contains a Dirac fermion transforming as a flavor triplet. The third component of the triplet $\chi_b$ comprises the cosmological DM. A flavor singlet, color triplet scalar field $\Phi$ mediates the interactions between the DM and the Standard Model quarks.The model is similar to the MSSM with a light bottom squark and neutralino, and is thus a flavor-specific example of a \tchannel model. 
-\Todo{Why can't there by a t-specific version?}
+The model contains a Dirac fermion transforming as a flavor triplet, exclusively coupling
+to right-handed down-type quarks. The third component of the triplet $\chi_b$ comprises the 
+cosmological DM. Within the MFV framework, the other fermions in the flavor triplet can be 
+made sufficiently heavy and weakly-coupled that they can be neglected in the analysis.
+A flavor singlet, color triplet scalar field $\Phi$ mediates the interactions between the DM 
+and the Standard Model quarks. The model is similar to the MSSM with a light bottom squark and neutralino, 
+and is thus a flavor-specific example of a \tchannel model. 
+\Todo{Spell out implications on MFV assumption, and whether top-flavored could exist too.}
 
 The Lagrangian considered is given by
 \begin{equation}
@@ -22,13 +33,11 @@ The Lagrangian considered is given by
 %However, the bb+MET (which often also falls in the b+MET signal region) has both pure QCD production of the colored mediator 
 %($g_s^2$) and also possibly diagrams that scale as $g_s^2*g$. 
 
-Within the MFV framework, the other fermions in the flavor triplet can be made sufficiently heavy and weakly-coupled that they can be neglected in the analysis.
-
 \paragraph{Parameter scan}
 
 The nature of the model is not conducive to a simple scaling behavior that would allow us reduce the number of points to be simulated. This is because of the interference of diagrams with QCD production of the mediator (which scale as $g^2_s$) with diagrams that are proportional to the coupling $g$ in the $b+$\MET{} and $b\bar{b}$+\MET{} final states. Fixing the couplings also fixes the mediator width, when adopting the minimal width assumption. 
 
-A full study of the parameter scan for this model was not available for this report; thus we recommend scanning a range of  possible widths as discussed in a more-limited way for the \schannel mono-jet, spanning from the minimal width to a value approaching the particle limit. A coupling benchmark such as $g=1$ should be considered for each mass point since this would be a distinctive feature of this benchmark from SUSY models with sbottom squarks (see Section~\ref{sec:monojet_t_channel} for further discussion): Cross-sections for unit couplings can be found in Appendix~\ref{app:xsecs_bFDM}. The coupling could also be chosen to fulfill constraints from the relic density (see Appendix~\ref{app:Relic_Density_bFDM}, with corresponding cross sections in Tables~\ref{tab:g_relic_13T} onwards). 
+A full study of the parameter scan for this model was not available for this report; thus we recommend scanning a range of  possible widths as discussed in a more-limited way for the \schannel mono-jet, spanning from the minimal width to a value approaching the particle limit, e.g. $g=0.5,1,2,3$. A coupling benchmark such as $g=1$ should be considered for each mass point since this would be a distinctive feature of this benchmark from SUSY models with sbottom squarks (see Section~\ref{sec:monojet_t_channel} for further discussion): Cross-sections for unit couplings can be found in Appendix~\ref{app:xsecs_bFDM}. The coupling could also be chosen to fulfill constraints from the relic density (see Appendix~\ref{app:Relic_Density_bFDM}, with corresponding cross sections in Tables~\ref{tab:g_relic_13T} onwards). 
 
 A scan of Dark Matter and mediator masses should be done in the on-shell region $M_\Phi > \mDM + m_b$, since the cross-sections in the off-shell region are too small to be sensitive with early LHC data, spanning from 10 to 500 GeV in \mDM and from 10 to 1300 GeV in \mMed. 
 
