--- a/doc/tex/TChannelModels.tex
+++ b/doc/tex/TChannelModels.tex
@@ -78,17 +78,25 @@ in the limit $M_{\phi_i}, \mDM \gg m_{u_i}$.
 The leading-order processes involved in MET+jet production are shown
 in Fig. \ref{fig:tchannelMonojet}.
 Note that the generation index for $\phi$ is linked to the incoming
-fermion(s).
+fermion(s), and it runs on all three quark generations due to 
+the MFV assumption. 
 %Thus, mono-jet production via $\phi^3_u$ is not possible at
 %this order, while production through $\phi^3_d$ is suppressed by
 %the $b$ parton PDF.
+%fermion(s).
+%CD: probably not needed? It's clear we need all three quarks. 
+%However, coupling to the third generation is required by MFV. 
+However, if the coupling $g$ includes a Yukawa coupling proportional to the quark mass, 
+and $g$ is sufficiently large, LHC searches will still be sensitive to this model, 
+as explained in Section~\ref{sec:singleb}.
+
 This model can also give a signal in the di-jet +
 MET channel when, for example, the $\chiDM$ is exchanged in the
 \tchannel and the resulting $\phi$ pair each decay to a jet +
 $\chiDM$. Fig.~\ref{fig:tchannelDijet} shows the leading order diagrams.
-%Except for the $gg$ induced process, di-jet production
-%through $\phi^3_u$ is not possible, and production through $\phi^3_d$ is
-%again suppressed.
+Except for the $gg$ induced process, di-jet production
+through $\phi^3_u$ is not possible, and production through $\phi^3_d$ is
+again suppressed. 
 The diagram involving the \tchannel exchange
 of $\chiDM$ is strongly dependent upon the Dirac fermion assumption.
 For a Majorana fermion, $q\bar q,\bar q\bar q,$ and $qq$ production
@@ -336,15 +344,17 @@ As in the \schannel models, scans should be performed over
 $\mDM$ and $\Mphi$. The viable ranges of both parameters nearly
 coincide with the scan proposed for the \schannel; for simplicity we
 recommend adopting the \schannel mono-jet grid.
-
-The rates of the first three diagrams of
-Fig.~\ref{fig:tchannelMonojet} scale as one with the coupling $g$. In
-the heavy mediator limit, then, the kinematic distributions depend
-only indirectly on the coupling through the effect on the minimal
-mediator width. In contrast with the \schannel case, however, the
+%Sentence not needed? 
+%Reshuffled after Tongyan's comments.
+%In the heavy mediator limit, the kinematic distributions depend
+%on the coupling through the effect on the minimal
+%mediator width. 
+In contrast to the \schannel case, the
 bounds one obtains from X+MET searches depends strongly on the width
 of the mediator, as is visible in Figs.~5 and 6 of
 Ref.~\cite{Papucci:2014iwa}, except in the heavy mediator limit ($\Mphi \approx 2$\,TeV). 
+%In the heavy mediator limit, the rates of the first three diagrams of
+%Fig.~\ref{fig:tchannelMonojet} scale as one with the coupling $g$. 
 A scan over the width was not available for this report; thus we recommend scanning a range of 
 possible widths as discussed in a more-limited way for the \schannel mono-jet, spanning from the minimal 
 width to a value approaching the particle limit (for example, $\Gamma \approx \Mphi/3$ in Ref.~\cite{Papucci:2014iwa}).
@@ -404,6 +414,6 @@ parallels that of the monojet case.
 %Appendix A.
 %
 
- \subsection{\texorpdfstring{Additional considerations for signatures with a single $b-$quark + MET}{Additional considerations for  with a single b-quark + MET}}
+ \subsection{\texorpdfstring{Additional considerations for signatures with $b-$quarks + MET}{Additional considerations for signatures  with b-quarks + MET}}
  \label{sec:singleb}
  \input{tex/SingleB.tex}
