Added reference to upcoming DM@LHC
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@284 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -2002,3 +2002,9 @@
       reportNumber   = "CERN-PH-TH-2006-232, FNT-T-2006-09",
       SLACcitation   = "%%CITATION = HEP-PH/0611129;%%",
 }
+
+@misc{DMatLHCProceedings,
+	author = "DM@LHC participants",
+	title = "DM@LHC 2014 proceedings",
+	note = "To appear",
+	}
