--- a/doc/tex/Introduction.tex
+++ b/doc/tex/Introduction.tex
@@ -81,8 +81,14 @@ Appropriate simplified models can be used both to
 interpret mono-X searches and to guide the design of complementary
 searches for additional signatures.
 
-At the end of 2014, ATLAS and CMS organized a forum, the ATLAS-CMS Dark
-Matter Forum, to form a consensus on the use of simplified models
+To understand what signal models should be used for Run 2, groups of experimenters from 
+both ATLAS and CMS collaborations have held separate discussions with small groups of
+theorists~\cite{Malik:2014ggr,Yavin:14092893}. 
+Another joint discussion was held at the DM@LHC workshop in Oxford, in 
+September 2014~\cite{DMatLHCProceedings}. 
+As discussed at the DM@LHC workshop, ATLAS and CMS organized a forum at the
+end of 2014, called the~\textit{ATLAS-CMS Dark
+Matter Forum}, to form a consensus on the use of simplified models
 and EFTs for Run-2 with the participation of experts on
 theories of dark matter. This is the final report of that forum.
 
@@ -138,8 +144,7 @@ The Dark Matter itself is assumed to be a single particle, a Dirac
 fermion WIMP, stable on collider timescales and non-interacting with
 the detector.  
 The former assumption is reductionistic.
-The rich
-particle content of the Standard Model is circumstantial evidence that
+The rich particle content of the Standard Model is circumstantial evidence that
 the dark matter sector, which constitutes five times as much of the
 mass of the universe, may be more complex than a single particle or a
 single interaction. But, as was often the case in the discoveries of
@@ -233,6 +238,7 @@ mediator particles), it is a starting point to prepare a set of
 distinct but complementary collider searches for Dark Matter, as
 it leads to benchmarks that are easily comparable across channels.
 
+%%TODO CD: rewrite this paragraph
 Contact interaction operators (EFTs) are also part of this report, 
 to be considered whenever neither a simplified model completion 
 nor other simplified models 
